--- a/language/ar.json
+++ b/language/ar.json
@@ -202,6 +202,10 @@
           "default": "القيام بتوسيع التسمية المرئية"
         },
         {
+          "label": "Aria label for the back button",
+          "default": "Back"
+        },
+        {
           "label": "التسمية عند تحميل الصورة الخلفية في منظر بنطاق 360 درجة",
           "default": "جاري تحميل الصورة الخلفية..."
         },
