--- a/language/el.json
+++ b/language/el.json
@@ -202,6 +202,10 @@
           "default": "Επέκταση ετικέτας"
         },
         {
+          "label": "Aria label for the back button",
+          "default": "Back"
+        },
+        {
           "label": "Ετικέτα για τη φόρτωση της εικόνας φόντου σε σκηνή 360°",
           "default": "Φόρτωση εικόνας φόντου..."
         },
