--- a/language/fr.json
+++ b/language/fr.json
@@ -202,6 +202,10 @@
           "default": "Élargir la vignette visuelle"
         },
         {
+          "label": "Aria label for the back button",
+          "default": "Back"
+        },
+        {
           "label": "Vignette pour le chargement de l'image de fond dans une scène 360",
           "default": "Chargement de l'image de fond..."
         },
