--- a/language/lt.json
+++ b/language/lt.json
@@ -202,6 +202,10 @@
           "default": "Išskleisti vaizdinę etiketę"
         },
         {
+          "label": "Aria label for the back button",
+          "default": "Back"
+        },
+        {
           "label": "Etiketė, kai 360 scenoje įkeliamas fono vaizdas",
           "default": "Įkeliamas fono vaizdas..."
         },
