--- a/language/mn.json
+++ b/language/mn.json
@@ -202,6 +202,10 @@
           "label": "Шошгыг өргөжүүлэх товчлуурын ариа шошго"
         },
         {
+          "label": "Aria label for the back button",
+          "default": "Back"
+        },
+        {
           "default": "Дэвсгэр зургийг ачаалж байна...",
           "label": "Дэвсгэр зургийг 360 хэмийн үзэгдэлд ачаалж байх үеийн шошго"
         },
