--- a/language/sl.json
+++ b/language/sl.json
@@ -202,6 +202,10 @@
           "default": "Razširi prikaz"
         },
         {
+          "label": "Aria label for the back button",
+          "default": "Back"
+        },
+        {
           "label": "Besedilo za nalaganje slike ozadja v načinu 360",
           "default": "Nalagam sliko ozadja ..."
         },
